k8s/base/05-ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: llm-devops
  labels:
    app.kubernetes.io/part-of: llm-devops-project
    app.kubernetes.io/name: ollama
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ollama
  ports:
    - port: 11434
      targetPort: 11434
      name: http
