k8s/base/07-webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: llm-devops
  labels:
    app.kubernetes.io/part-of: llm-devops-project
    app.kubernetes.io/name: open-webui
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: open-webui
  ports:
    - port: 8080
      targetPort: 8080
      name: http
